--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
       </section>
       <!-- adventages-text -->
-      <section class="advantages">
-        <div>
+      <section class="advantages-section">
+        <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-items">
@@ -99,8 +99,10 @@
           <ul class="team-cards">
             <li class="team-card">
               <img src="./images/card-1-mark.jpg" alt="Mark Guerrero" />
-              <h3 class="second-title">Mark Guerrero</h3>
-              <p class="main-text">Product Designer</p>
+              <div class="text-section">
+                <h3 class="second-title">Mark Guerrero</h3>
+                <p class="main-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -109,8 +111,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="second-title">Tom Ford</h3>
-              <p class="main-text">Frontend Developer</p>
+              <div class="text-section">
+                <h3 class="second-title">Tom Ford</h3>
+                <p class="main-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -119,8 +123,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="second-title">Camila Garcia</h3>
-              <p class="main-text">Marketing</p>
+              <div class="text-section">
+                <h3 class="second-title">Camila Garcia</h3>
+                <p class="main-text">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -129,8 +135,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="second-title">Daniel Wilson</h3>
-              <p class="main-text">UI Designer</p>
+              <div class="text-section">
+                <h3 class="second-title">Daniel Wilson</h3>
+                <p class="main-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -147,8 +155,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Banking App</h3>
-              <p class="main-text">App</p>
+              <div class="text-section">
+                <h3 class="second-title">Banking App</h3>
+                <p class="main-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -157,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Cashless Payment</h3>
-              <p class="main-text">Marketing</p>
+              <div class="text-section">
+                <h3 class="second-title">Cashless Payment</h3>
+                <p class="main-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -167,8 +179,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Meditation App</h3>
-              <p class="main-text">App</p>
+              <div class="text-section">
+                <h3 class="second-title">Meditation App</h3>
+                <p class="main-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -177,8 +191,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Taxi Service</h3>
-              <p class="main-text">Marketing</p>
+              <div class="text-section">
+                <h3 class="second-title">Taxi Service</h3>
+                <p class="main-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -187,8 +203,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Screen Illustrations</h3>
-              <p class="main-text">Design</p>
+              <div class="text-section">
+                <h3 class="second-title">Screen Illustrations</h3>
+                <p class="main-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -197,8 +215,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="second-title">Online Courses</h3>
-              <p class="main-text">Marketing</p>
+              <div class="text-section">
+                <h3 class="second-title">Online Courses</h3>
+                <p class="main-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
