--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header-container">
       <div class="container header-section">
         <nav class="nav-list">
           <a class="logo" href="./index.html"
@@ -155,7 +155,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Banking App</h3>
                 <p class="main-text">App</p>
               </div>
@@ -167,7 +167,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Cashless Payment</h3>
                 <p class="main-text">Marketing</p>
               </div>
@@ -179,7 +179,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Meditation App</h3>
                 <p class="main-text">App</p>
               </div>
@@ -191,7 +191,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Taxi Service</h3>
                 <p class="main-text">Marketing</p>
               </div>
@@ -203,7 +203,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Screen Illustrations</h3>
                 <p class="main-text">Design</p>
               </div>
@@ -215,7 +215,7 @@
                 width="360"
                 height="300"
               />
-              <div class="text-section">
+              <div class="text-section portfolio-text">
                 <h3 class="second-title">Online Courses</h3>
                 <p class="main-text">Marketing</p>
               </div>
@@ -226,14 +226,16 @@
     </main>
     <footer class="footer-section">
       <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="brand-logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="brand-logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
